--- a/greensol_credit_scoring_assessment.ipynb
+++ b/greensol_credit_scoring_assessment.ipynb
@@ -1882,7 +1882,7 @@
    "id": "4cac5ae2",
    "metadata": {},
    "source": [
-    "> Running the describe method on the *credit_util* feature shows that 25% of users are heavily dependent on credit using at least 71.4% of the credit, this signals high risk of not repaying the loan"
+    "> Running the describe method on the *credit_util* feature shows that 25% of users are heavily dependent on credit using at least 71.5% of the credit, this signals high risk of not repaying the loan"
    ]
   },
   {
@@ -1933,7 +1933,7 @@
    "id": "0ca41f27",
    "metadata": {},
    "source": [
-    "> The pie chart shows the credit utilization level distribution (risk level distribution) across the users."
+    "> The pie chart shows the credit utilization level distribution (risk level distribution) across the users. High credit utilization level suggests over reliance on the credit with risk of not paying back."
    ]
   },
   {
